added JVM version dependent default args